# citeproc-rs

./: .gitignore  .gitmodules  .ignore  .projections.json  .travis.yml  Cargo.toml  Dockerfile  LICENSE.md  README.md  bors.toml  example.csl  flame-graph.html  link.sh  rustfmt.toml
bindings/ffi/: CHANGELOG.md  Cargo.toml  Makefile  README.md  cbindgen.c.toml  cbindgen.cpp.toml  cbindgen.swift.toml  cbindgen.toml  module.modulemap
bindings/ffi/examples/: .gitignore  Makefile  client.c  client_cpp.cpp  panicking.c
bindings/ffi/include/: citeproc_rs.h
bindings/ffi/src/: buffer.rs  clusters.rs  errors.rs  lib.rs  logger.rs  macros.rs  nullable.rs  util.rs
bindings/ffi/src/buffer/: cstring.rs
citeproc/: Cargo.toml  out.html  out.json  ucd.sh
citeproc-wasm/: Cargo.toml  README.md
citeproc-wasm/.cargo/: config
citeproc-wasm/js-demo/: .gitignore  package.json  tsconfig.what.json  webpack.config.js
citeproc-wasm/js-demo/js/: App.tsx  Document.ts  DocumentEditor.tsx  Fetcher.ts  useDocument.ts
citeproc-wasm/node-tryout/: index.js  package.json
citeproc-wasm/src/: lib.rs  utils.rs
citeproc-wasm/tests/: web.rs
citeproc/benches/: some.rs
citeproc/benches/data/: australian-guide-to-legal-citation.csl
citeproc/src/: db.rs  db_impl.rs  driver.rs  error.rs  flame_span.rs  input.rs  lib.rs  main.rs  pandoc.rs  proc.rs  style.rs  tester.rs  utils.rs
citeproc/src/db/: cite.rs  ir.rs  mod.rs  test.rs  update.rs  xml.rs
citeproc/src/input/: cite.rs  csl-json.rs  csl_json.rs  date.rs  mod.rs  names.rs  numeric.rs  reference.rs
citeproc/src/input/unicode/: mod.rs  script.rs
citeproc/src/locale/: db.rs  fetcher.rs  lang.rs  mod.rs  test.rs
citeproc/src/output/: any.rs  formatter.rs  generic.rs  html.rs  markdown.rs  mod.rs  pandoc.rs  plain.rs
citeproc/src/proc/: choose.rs  cite_context.rs  date.rs  disamb.rs  group.rs  helpers.rs  ir.rs  mod.rs  names.rs  out.html
citeproc/src/proc/names/: initials.rs
citeproc/src/style/: attr.rs  db.rs  element.rs  error.rs  get_attribute.rs  global.rs  juris-module.rs  locale.rs  take_while.rs  terms.rs  variables.rs  version.rs
citeproc/src/style/locale/: db.rs  fetcher.rs  lang.rs  test.rs
citeproc/tests/data/: disamb.json  disamb.md  group-suppression.json  year-suffix.md
citeproc/tests/data/styles/: year-suffix.csl
crates/citeproc/: CHANGELOG.md  Cargo.toml
crates/citeproc-db/: Cargo.toml
crates/citeproc-db/src/: cite.rs  lib.rs  xml.rs
crates/citeproc-io/: Cargo.toml
crates/citeproc-io/src/: cite.rs  csl_json.rs  lib.rs  numeric.rs  reference.rs  utils.rs
crates/citeproc-io/src/output/: generic.rs  html.rs  markup.rs  micro_html.rs  mod.rs  pandoc.rs  plain.rs  rtf.rs
crates/citeproc-proc/: Cargo.toml
crates/citeproc-proc/src/: choose.rs  cite_context.rs  date.rs  db.rs  disamb.rs  element.rs  group.rs  helpers.rs  ir.rs  ir_database.rs  lib.rs  names.rs  number.rs  renderer.rs  sort.rs  test.rs  walker.rs
crates/citeproc-proc/src/disamb/: finite_automata.rs  free.rs  implementation.rs  knowledge.rs  mod.rs  names.rs  old.rs  ref_context.rs  test.rs
crates/citeproc-proc/tests/data/: aglc.csl
crates/citeproc/benches/: some.rs
crates/citeproc/benches/data/: apa.csl
crates/citeproc/src/: api.rs  driver.rs  error.rs  lib.rs  processor.rs  test.rs  tester.rs  utils.rs
crates/citeproc/src/db/: cite.rs  ir.rs  mod.rs  proc_database.rs  test.rs  update.rs  xml.rs
crates/citeproc/src/input/: cite.rs
crates/citeproc/src/output/: markdown.rs  mod.rs  plain.rs
crates/citeproc/src/proc/: choose.rs  date.rs  disamb.rs  names.rs
crates/citeproc/tests/: .gitignore  suite.rs  yml_test_grind.rs.txt
crates/citeproc/tests/data/: .gitignore  bibtests.txt  disamb.md  ignore.txt  snapshot.txt
crates/citeproc/tests/snapshots/: suite__bugreports_AccidentalAllCaps.txt.snap  suite__bugreports_DoubleEncodedAngleBraces.txt.snap  suite__bugreports_FourAndFour.txt.snap  suite__bugreports_NoCaseEscape.txt.snap  suite__bugreports_NoTitle.txt.snap  (+17 more)
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  pandoc.rs
crates/csl/: Cargo.toml  README.md
crates/csl/src/: attr.rs  error.rs  from_node.rs  juris_module.rs  lib.rs  locale.rs  terms.rs  test.rs  variables.rs  version.rs
crates/db/: Cargo.toml
crates/db/src/: cite.rs  cluster.rs  lib.rs  xml.rs
crates/io/: Cargo.toml  ucd.sh
crates/io/src/: cite.rs  cluster.rs  csl_json.rs  date.rs  lazy.rs  lib.rs  names.rs  numeric.rs  reference.rs  text_case.rs  utils.rs
crates/io/tests/: fetch-csl-data.sh  json.rs
crates/pandoc-types/: Cargo.toml  README.md
crates/pandoc-types/src/: lib.rs
crates/proc/: Cargo.toml  ucd.sh
crates/proc/src/: choose.rs  citation_label.rs  cite_context.rs  cluster.rs  date.rs  db.rs  element.rs  group.rs  helpers.rs  ir.rs  lib.rs  names.rs  number.rs  page_range.rs  ref_ir.rs  renderer.rs  sort.rs  test.rs  tree.rs  walker.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: humans.rs  inspect.rs  lib.rs  toml.rs  yaml.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  main.rs  ucd.rs
crates/wasm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html
crates/wasm/.cargo/: config
crates/wasm/js-demo/: .gitignore  README.md  build.js  package.json  serve.js  webpack.config.js
crates/wasm/js-tests/: .gitignore  README.md  build.sh  firefox-env  index.test.ts  install_firefox.sh  jest.config.js  package.json  utils.ts  webdriver-environment.js  webdriver.config.js
crates/wasm/node-tryout/: index.js
crates/wasm/scripts/: all-targets.sh  model-package.json  npm-pkg-config.sh
crates/wasm/src/: errors.rs  include.js  lib.rs  options.rs  typescript.rs  utils.rs  wasm_result.rs
csl/: Cargo.toml
csl/src/: attr.rs  error.rs  lib.rs  locale.rs  terms.rs  variables.rs  version.rs
csl/src/locale/: lang.rs
csl/src/style/: info.rs  mod.rs
pandoc-ffi-bridge/: Cargo.toml  Makefile  README.md  build-waat.rs  build.rs  pandoc-ffi-bridge.cabal  so-many-string-types.md  stack.yaml
pandoc-ffi-bridge/include/: myfile.h
pandoc-ffi-bridge/src/: Lib.hs  Lib.hsc  main.rs  wrapper.c
src/: lib.rs  (+4 more)
(+259 files in other folders)
