# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright © 2018 Corporation for Digital Scholarship

[workspace]
members = [ "crates/*" ]
# for running `cargo test`, `cargo doc` etc at the workspace root
default-members = [
  "crates/csl",
  "crates/io",
  "crates/db",
  "crates/proc",
  "crates/wasm",
  "crates/citeproc",
]

[profile.bench]
lto = "thin"
# flamegraph with cargo test --release
debug = true

[profile.release]
lto = "thin"

[patch.crates-io.parking_lot_core]
git = "https://github.com/cormacrelf/parking_lot.git"
branch = "wasm32"

[patch.crates-io.parking_lot]
git = "https://github.com/cormacrelf/parking_lot.git"
branch = "wasm32"

# [profile.dev]
# rpath = true
