[package]
name = "citeproc-wasm"
version = "0.0.1"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# wasm-pack has no way of selecting feature sets, so this is wasm's
default = ["console_error_panic_hook"]
# default = []

[dependencies]
citeproc = { path = "../citeproc" }
cfg-if = "0.1.2"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

# TODO: Set the opt level on new wasm-pack 0.6.0 config
# when it's released, so as not to interfere with the
# other native binary targets (cargo only lets you set it
# on the workspace root)

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
# lto = true
