[package]
name = "citeproc"
version = "0.0.1"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "citeproc-rs"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "parallel", "jemalloc"]
jemalloc = ["jemallocator"]
parallel = ["rayon"]
cli = ["clap", "directories"]

[dependencies]
roxmltree = "0.4.1"
codespan = { version = "0.2.0", optional = false }
codespan-reporting = { version = "0.2.0", optional = false }
strum = "0.11.0"
strum_macros = "0.11.0"
cfg-if = "0.1.2"
typed-arena = "1.4.1"
serde_derive = "1.0.80"
serde = "1.0.80"
serde_json = "1.0.33"
fnv = "1.0.6"
nom = "4"
failure = "0.1.3"
itertools = "0.7.11"
semver = "0.9.0"
lazy_static = "1.2.0"
ucd-trie = "0.1.1"
salsa = "0.10.0-alpha4"
string_cache = "0.7.3"
pandoc_types = { path = "../pandoc-types" }

clap = { version = "2.32.0", optional = true }
rayon = { version = "1.0.3", optional = true }
directories = { version = "1.0.2", optional = true }
jemallocator = { version = "0.1.9", optional = true }
atty = "0.2.11"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "some"
harness = false

