# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright © 2018 Corporation for Digital Scholarship

[package]
name = "citeproc"
version = "0.0.1"
authors = ["Cormac Relf <web@cormacrelf.net>"]
license = "MPL-2.0"
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "citeproc-rs"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "parallel", "jemalloc"]
jemalloc = ["jemallocator"]
parallel = ["rayon"]
cli = ["clap", "directories"]

[dependencies]
csl = { path = "../csl" }
pandoc_types = { path = "../pandoc-types" }
cfg-if = "0.1.2"
codespan = { version = "0.2.0", optional = false }
codespan-reporting = { version = "0.2.0", optional = false }
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
fnv = "1.0.6"
nom = "4"
itertools = "0.7.11"
ucd-trie = "0.1.1"
salsa = "0.10.0"

clap = { version = "2.32.0", optional = true }
rayon = { version = "1.0.3", optional = true }
directories = { version = "1.0.2", optional = true }
jemallocator = { version = "0.1.9", optional = true }
atty = "0.2.11"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "some"
harness = false

