# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright © 2018 Corporation for Digital Scholarship

[package]
name = "citeproc"
version = "0.0.1"
authors = ["Cormac Relf <web@cormacrelf.net>"]
license = "MPL-2.0"
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "citeproc-rs"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "parallel", "jemalloc"]
jemalloc = ["jemallocator"]
parallel = ["rayon"]
cli = ["clap", "directories"]

[dependencies]
csl = { path = "../csl" }
pandoc_types = { path = "../pandoc-types" }
cfg-if = "0.1.9"
codespan = { version = "0.3.0", optional = false }
codespan-reporting = { version = "0.3.0", optional = false }
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.39"
fnv = "1.0.6"
nom = "4"
itertools = "0.8.0"
ucd-trie = "0.1.1"
salsa = "0.12.3"

clap = { version = "2.33.0", optional = true }
rayon = { version = "1.1.0", optional = true }
directories = { version = "2.0.1", optional = true }
jemallocator = { version = "0.3.2", optional = true }
atty = "0.2.11"

[dev-dependencies]
criterion = "0.2.11"

# [[bench]]
# name = "some"
# harness = false

