# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright © 2019 Corporation for Digital Scholarship

[package]
name = "csl"
version = "0.0.1"
authors = ["Cormac Relf <web@cormacrelf.net>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
roxmltree = "0.4.1"
fnv = "1.0.6"
strum = "0.11.0"
strum_macros = "0.11.0"
nom = "4"
serde = "1.0.80"
serde_derive = "1.0.80"
string_cache = "0.7.3"
lazy_static = "1.2.0"
semver = "0.9.0"
