# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright © 2018 Corporation for Digital Scholarship

[package]
name = "ffi-bridge"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
license = "MPL-2.0"
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2.45"
# curryrs = "0.2.0"

# [profile.dev]
# rpath = true
