name:                pandoc-ffi-bridge
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cormacrelf/citeproc-rs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  include-dirs: include
  other-modules:       Lib, Text.Pandoc.FFI
  default-language:    Haskell2010
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >= 4.7 && < 5
                     , curryrs >= 0.2.0 && < 0.3.0
                     , pandoc-types >= 1.17.3 && < 1.18
                     , pandoc >= 2.5 && < 2.7
                     , bytestring >= 0.10.8.2 && < 0.11

foreign-library pandoc-ffi-bridge
  -- TODO on linux?
  -- lib-version-info:    6:3:2
  type:                native-shared
  include-dirs: include
  build-depends:       base >= 4.7 && < 5
                     , curryrs >= 0.2.0 && < 0.3.0
                     , pandoc-types >= 1.17.3 && < 1.18
                     , pandoc >= 2.5 && < 2.7
                     , bytestring >= 0.10.8.2 && < 0.11
  hs-source-dirs:      src
  other-modules:       Lib, Text.Pandoc.FFI
  c-sources:           src/wrapper.c
  default-language:    Haskell2010
  -- TODO for windows builds
  -- if os(Windows)
  --   options: standalone
  --   mod-def-file: MyForeignLib.def

source-repository head
  type:     git
  location: https://github.com/cormacrelf/citeproc-rs
