[package]
name = "citeproc-db"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
parallel = []

[dependencies]
salsa = "0.13.0"
fnv = "1.0.6"
csl = { path = "../csl" }
citeproc-io = { path = "../io" }
log = "0.4.8"
cfg-if = "0.1.9"
