[package]
name = "citeproc-io"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["plain", "html", "pandoc", "rtf"]
plain = []
html = ["html5ever"]
pandoc = ["pandoc_types"]
rtf = ["rtf-grimoire"]

[dependencies]
html5ever = { version = "0.24.0", optional = true }
pandoc_types = { path = "../pandoc-types", optional = true }
rtf-grimoire = { version = "0.1.1", optional = true }
fnv = "1.0.6"
nom = "5.0.0"
csl = { path = "../csl" }
serde = { version = "1.0.98", features = ["rc"] }
serde_derive = "1.0.98"
itertools = "0.8.0"
