[package]
name = "citeproc-io"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["plain", "html"]
plain = []
html = ["html5ever"]
pandoc = ["pandoc_types"]

[dependencies]
html5ever = { version = "0.24.0", optional = true }
pandoc_types = { path = "../pandoc-types", optional = true }
fnv = "1.0.6"
nom = "5.0.1"
csl = { path = "../csl" }
serde = { version = "1.0.100", features = ["rc"] }
serde_derive = "1.0.100"
itertools = "0.8.0"
stringreader = "0.1.1"
v_htmlescape = "0.4.5"
log = "0.4.8"

[dev-dependencies]
serde_json = "1.0.40"
