[package]
name = "citeproc-proc"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
csl = { path = "../csl" }
citeproc-io = { path = "../citeproc-io" }
serde = "1.0.98"
serde_derive = "1.0.98"
fnv = "1.0.6"
ucd-trie = "0.1.1"
