[package]
name = "citeproc-proc"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

[features]
test = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
csl = { path = "../csl" }
citeproc-io = { path = "../citeproc-io" }
serde = "1.0.100"
serde_derive = "1.0.100"
fnv = "1.0.6"
ucd-trie = "0.1.2"
petgraph = "0.4.13"
generational-arena = "0.2.2"
cfg-if = "0.1.9"
salsa = "0.13.0"
citeproc-db = { path = "../citeproc-db" }
strum = "0.15.0"
log = "0.4.8"
bitflags = "1.1.0"
lazy_static = "1.4.0"
itertools = "0.8.0"
smallvec = "0.6.10"
parking_lot = "0.9.0"

[dev-dependencies]
lazy_static = "1.4.0"
env_logger = "0.7.0"
