# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright © 2018 Corporation for Digital Scholarship

[package]
name = "citeproc"
version = "0.0.1"
authors = ["Cormac Relf <web@cormacrelf.net>"]
license = "MPL-2.0"
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["parallel"]
parallel = ["rayon", "citeproc-db/parallel"]

[dependencies]
rayon = { version = "1.2.0", optional = true }
cfg-if = "0.1.10"
fnv = "1.0.6"
salsa = "0.13.0"
log = "0.4.8"
serde = { version = "1.0.100", features = ["rc"] }
serde_derive = "1.0.100"

csl = { path = "../csl" }
citeproc-io = { path = "../io" }
citeproc-proc = { path = "../proc" }
citeproc-db = { path = "../db" }
thiserror = "1.0.6"

[dev-dependencies]
test_utils = { path = "../test-utils" }
criterion = "0.3.0"
pretty_assertions = "0.6.1"
lazy_static = "1.4.0"
serde_yaml = "0.8.9"
toml = "0.5.3"
env_logger = "0.6.2"

[dev-dependencies.datatest]
git = "https://github.com/cormacrelf/datatest"
branch = "test_type"
features = ["post_v139"]

# [[bench]]
# name = "some"
# harness = false

