# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright © 2019 Corporation for Digital Scholarship

[package]
name = "csl"
version = "0.0.1"
authors = ["Cormac Relf <web@cormacrelf.net>"]
license = "MPL-2.0"
edition = "2018"
description = "Parser and types for Citation Style Language"
readme = "README.md"
repository = "https://github.com/cormacrelf/citeproc-rs"

[dependencies]
roxmltree = "0.13.0"
fnv = "1.0.7"
strum = "0.19.2"
strum_macros = "0.19.2"
# don't need lexical as it is only used to parse floats
nom = { version = "5.1.2", default-features = false, features = ["std"] }
serde = { version = "1.0.116", features = ["rc"] }
serde_derive = "1.0.116"
semver = "0.11.0"
log = "0.4.11"
thiserror = "1.0.20"
smartstring = "0.2.5"
string_cache = "0.8.0"
