[package]
name = "citeproc-db"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
parallel = []

[dependencies]
salsa = "0.15.2"
fnv = "1.0.7"
csl = { path = "../csl" }
citeproc-io = { path = "../io" }
log = "0.4.11"
cfg-if = "0.1.10"
string-interner = "0.12.0"
serde_derive = "1.0.116"
serde = "1.0.116"
indexmap = { version = "1.6.2", features = ["std"]}
