[package]
name = "citeproc-io"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["plain", "markup"]
plain = []
markup = ["html5ever"]
pandoc = ["pandoc_types"]

[dependencies]
html5ever = { version = "0.25.1", optional = true }
pandoc_types = { path = "../pandoc-types", optional = true }
fnv = "1.0.7"
# don't need lexical as it is only used to parse floats
nom = { version = "5.1.2", default-features = false, features = ["std"] }
csl = { path = "../csl", features = ["serde1"] }
serde = { version = "1.0.116", features = ["rc"] }
serde_derive = "1.0.116"
itertools = "0.9.0"
stringreader = "0.1.1"
v_htmlescape = "0.10.3"
log = "0.4.11"
unic-segment = "0.9.0"
phf = { version = "0.8.0", features = ["macros"] }
regex = "1.3.9"
once_cell = "1.4.1"
# stores short (<=23 byte) strings inline
# a lot of our strings are tiny (", ")
smartstring = { version = "0.2.5", features = ["serde" ] }
# smallstr = { version = "0.1.0", path = "../../smallstr", features = ["serde", "union"] }
# a Cow that can hold a smartstring
cervine = { version = "0.0.6", features = ["serde" ] }
lazy-transform-str = "0.0.6"
markup5ever_rcdom = "0.1.0"
ucd-trie = "0.1.3"

[dev-dependencies]
serde_json = "1.0.57"
env_logger = "0.7.1"
pretty_assertions = "0.6.1"
