[package]
name = "citeproc-proc"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

[features]
default = []
parallel = ["rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
csl = { path = "../csl" }
citeproc-io = { path = "../io" }
serde = "1.0.116"
serde_derive = "1.0.100"
fnv = "1.0.6"
ucd-trie = "0.1.2"
petgraph = "0.5.1"
cfg-if = "0.1.9"
salsa = "0.15.2"
citeproc-db = { path = "../db" }
strum = "0.15.0"
log = "0.4.8"
bitflags = "1.1.0"
lazy_static = "1.4.0"
itertools = "0.8.0"
smallvec = "0.6.10"
# don't need lexical as it is only used to parse floats
nom = { version = "5.0.1", default-features = false, features = ["std"] }
unicase = "2.6.0"
unic-segment = "0.9.0"
indextree = "4.3.1"
rayon = { version = "1.4.0", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
env_logger = "0.7.0"
pretty_assertions = "0.6.1"
