[package]
name = "citeproc-proc"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

[features]
default = []
parallel = ["rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
csl = { path = "../csl" }
citeproc-io = { path = "../io" }
serde = "1.0.116"
serde_derive = "1.0.116"
fnv = "1.0.7"
petgraph = "0.5.1"
cfg-if = "0.1.10"
salsa = "0.15.2"
citeproc-db = { path = "../db" }
strum = "0.19.2"
log = "0.4.11"
bitflags = "1.2.1"
lazy_static = "1.4.0"
itertools = "0.9.0"
smallvec = "1.4.2"
# don't need lexical as it is only used to parse floats
nom = { version = "6.1.2", default-features = false, features = ["std"] }
unic-segment = "0.9.0"
unic-ucd-category = "0.9.0"
indextree = "4.3.1"
rayon = { version = "1.4.1", optional = true }
string-interner = "0.12.0"
lexical-sort = "0.3.1"

[dev-dependencies]
lazy_static = "1.4.0"
env_logger = "0.7.1"
pretty_assertions = "0.6.1"
