[package]
name = "test_utils"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citeproc = { path = "../citeproc" }
citeproc-io = { path = "../io" }
citeproc-proc = { path = "../proc" }
csl = { path = "../csl" }
directories = "2.0.2"
lazy_static = "1.4.0"
serde_derive = "1.0.100"
serde = "1.0.116"
serde_json = "1.0.40"
serde_yaml = "0.8.9"
# don't need lexical as it is only used to parse floats
nom = { version = "5.0.1", default-features = false, features = ["std"] }
regex = "1.3.1"
anyhow = "1.0.25"
once_cell = "1.2.0"
log = "0.4.8"
