[package]
name = "tools"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# inspect = ["test_utils"]

[[bin]]
name = "inspect"
path = "src/bin/inspect.rs"
required-features = ["inspect"]

[dependencies]
directories = "3.0.1"
git2 = "0.13.11"
anyhow = "1.0.32"
# latest release on crates.io doesn't support Ignored yet
cargo-suity = { git = "https://github.com/andoriyu/cargo-suity", branch = "master", version = "0.2.1" }
serde_json = "1.0.57"
serde = "1.0.116"
structopt = "0.3.18"
cargo_metadata = "0.11.3"
once_cell = "1.4.1"
serde_derive = "1.0.116"
clap = "2.33.3"
env_logger = "0.7.1"
serde_sexpr = "0.1.0"
ucd-parse = "0.1.8"
csl = { path = "../csl" }
regex = "1.3.9"
